Fix spacing issue on retina displays

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @font-face { font-family: Din; src: url('Din.otf'); }
 
 html { background-image: url('paper.png'); }
-body { width: 900px; margin: 300px auto; -webkit-font-smoothing: antialiased; font-family: Helvetica; color: #333333 }
+body { width: 1000px; margin: 300px auto; -webkit-font-smoothing: antialiased; font-family: Helvetica; color: #333333 }
 .header { float: left; padding: 1em; background-color: #f5474b; }
 .header a:hover { text-decoration: none; }
 h1 { font: bold 24px Din, Helvetica, sans-serif; color: #fefdfb; text-transform: uppercase; margin: 0; }
